# isometric-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  ecs.c  game_clock.h  main.c  profiler.c  profiler.h
camera/: camera.c  camera.h
renderer/: nuklear_sdl3_gpu.h  renderer.c  renderer.h  renderer_internal.h  ui.c  ui.h
shaders/: geometry.metal  nuklear.metal  sprite.metal  ui.metal
